# ToxicML

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
ToxicMl/: dataset.py  evaluation.py  hiv.ipynb  lipo.ipynb  metrics.py  trainer.py
ToxicMl/Api/: main.py
ToxicMl/Dl/: GraphDataset.py
ToxicMl/MLmodels/: Hiv.py  Lipo.py  attention.py  base.py  gcn.py  preprocessing.py  randomModel.py  sage.py
data/clintox/downsampled/: eval.csv  test.csv  train.csv
data/tox21/downsampled/: eval.csv  test.csv  train.csv
models/: Lasso_lipo.pkg  LinearSVM_lipo.pkg  RandomForestClassifier_tox21.pkg  Ridge_lipo.pkg  clintox_lr.pkl  clintox_rf.pkl  lr_hiv.pkg  nb_hiv.pkg
notebooks/: Downsampling.ipynb  preprocessing.ipynb
notebooks/Deep/: hiv.ipynb  hiv_custom_embeddings copy.ipynb  hiv_descriptors.ipynb  lipo_custom_embeddings.ipynb  lipo_descriptors.ipynb  transfer_learning.ipynb
notebooks/TraditionalMl/: lipo.ipynb  tox21.ipynb  utils.py
saved_models/deep/: HIV_ChemAttention_5-128.pt  LIPO_GCN_5-128.pt
tests/: test_datasets.py  test_init.py  test_metrics.py  test_models.py  test_preprocessing.py
