[tool.poetry]
name = "toxicml"
version = "0.1.0"
description = ""
authors = ["Tibor Cus <tibor.cus@outlook.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
pytest = "^8.3.3"
pydantic = "^2.9.2"
rdkit = "^2024.3.5"
molvs = "^0.1.1"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.20.1+cpu", source = "pytorch_cpu"}
torch-geometric = "^2.6.1"
ogb = "^1.3.6"
scikit-optimize = "^0.10.2"
wandb = "^0.18.7"
chemprop = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
